--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,7 +1,7 @@
 # H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=root1234
 spring.datasource.driver-class-name=org.h2.Driver
 
 # JPA/Hibernate Configuration
